--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>net.joinedminds.masserr</groupId>
     <artifactId>masserr2</artifactId>
     <packaging>war</packaging>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
     <name>Masserr2</name>
     <url>http://maven.apache.org</url>
 
