--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,21 @@
             <version>1.2.3</version>
         </dependency>
         <!--/Morphia for MongoDB-->
+        <dependency>
+            <groupId>org.scribe</groupId>
+            <artifactId>scribe</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.7.5</version>
+        </dependency>
 
         <!-- TEST -->
         <dependency>
