--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
             <version>1.4.3-1</version>
         </dependency>
         <dependency>
+            <groupId>org.kohsuke.stapler</groupId>
+            <artifactId>stapler-adjunct-fontawesome</artifactId>
+            <version>3.0.2-1</version>
+        </dependency>
+        <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
             <version>2.11.1</version>
