--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-        <stapler.version>1.210-SNAPSHOT</stapler.version>
+        <stapler.version>1.212</stapler.version>
         <powermock.version>1.5</powermock.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
