--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,8 @@
 
     <context-param>
         <param-name>DB_HOST</param-name>
-        <param-value>192.168.1.20</param-value>
+        <!--<param-value>192.168.1.20</param-value>-->
+        <param-value>localhost</param-value>
     </context-param>
     <context-param>
         <param-name>DB_NAME</param-name>
