--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
             <version>3.0.2-1</version>
         </dependency>
         <dependency>
+            <groupId>org.kohsuke.stapler</groupId>
+            <artifactId>stapler-adjunct-angularjs</artifactId>
+            <version>1.0.8-1</version>
+        </dependency>
+        <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
             <version>2.11.1</version>
@@ -185,7 +190,7 @@
     </pluginRepositories>
 
     <build>
-        <finalName>staplertest</finalName>
+        <finalName>masserr2</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
