--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
         <dependency>
             <groupId>org.kohsuke.stapler</groupId>
             <artifactId>stapler-adjunct-angularjs</artifactId>
-            <version>1.0.8-1</version>
+            <version>1.2.0-rc.3-1</version>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
