Fiddling with a rest api

--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,17 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-        <stapler.version>1.212</stapler.version>
+        <stapler.version>1.227</stapler.version>
         <powermock.version>1.5</powermock.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.4</version>
+        </dependency>
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
